chore: New Crowdin updates (#2590)

--- a/apps/wallet-mobile/src/i18n/locales/zh-Hant.json
+++ b/apps/wallet-mobile/src/i18n/locales/zh-Hant.json
@@ -45,9 +45,9 @@
   "components.common.navigation.transactionsButton": "Transactions",
   "components.delegation.delegationnavigationbuttons.stakingCenterButton": "Go to Staking Center",
   "components.delegation.withdrawaldialog.deregisterButton": "Deregister",
-  "components.delegation.withdrawaldialog.explanation1": "When **withdrawing rewards**, you also have the option to deregister the staking key.",
-  "components.delegation.withdrawaldialog.explanation2": "**Keeping the staking key** will allow you to withdraw the rewards, but continue delegating to the same pool.",
-  "components.delegation.withdrawaldialog.explanation3": "**Deregistering the staking key** will give you back your deposit and undelegate the key from any pool.",
+  "components.delegation.withdrawaldialog.explanation1": "When withdrawing rewards, you also have the option to deregister the staking key.",
+  "components.delegation.withdrawaldialog.explanation2": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool.",
+  "components.delegation.withdrawaldialog.explanation3": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool.",
   "components.delegation.withdrawaldialog.keepButton": "Keep registered",
   "components.delegation.withdrawaldialog.warning1": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time.",
   "components.delegation.withdrawaldialog.warning2": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserve.",
@@ -472,7 +472,7 @@
   "components.walletselection.walletselectionscreen.stakeDashboardButton": "Stake Dashboard",
   "components.walletselection.walletselectionscreen.loadingWallet": "Loading wallet",
   "components.walletselection.walletselectionscreen.supportTicketLink": "Ask our support team",
-  "components.catalyst.banner.name": "Catalyst Voting Registration",
+  "components.catalyst.banner.name": "Catalyst Voting",
   "components.catalyst.catalystbackupcheckmodal.consequencesCheckbox": "I understand that if I did not save my Catalyst PIN and QR code (or secret code) I will not be able to register and vote for Catalyst proposals.",
   "components.catalyst.catalystbackupcheckmodal.qrCodeCheckbox": "I have taken a screenshot of my QR code and saved my Catalyst secret code as a fallback.",
   "components.catalyst.catalystbackupcheckmodal.pinCheckbox": "I have written down my Catalyst PIN which I obtained in previous steps.",
@@ -489,7 +489,7 @@
   "components.catalyst.step4.subTitle": "Enter Spending Password",
   "components.catalyst.step5.subTitle": "Confirm Registration",
   "components.catalyst.step5.bioAuthDescription": "Please confirm your voting registration. You will be asked to authenticate once again to sign and submit the certificate generated in the previous step.",
-  "components.catalyst.step5.description": "Enter your spending password to confirm your voting registration and submit the certificate generated in previous step to the blockchain.",
+  "components.catalyst.step5.description": "Enter the spending password to confirm voting registration and submit the certificate generated in previous step to blockchain",
   "components.catalyst.step6.subTitle": "Backup Catalyst Code",
   "components.catalyst.step6.description": "Please take a screenshot of this QR code.",
   "components.catalyst.step6.description2": "We strongly recommend you to save your Catalyst secret code in plain text too, so that you can re-create your QR code if necessary.",
