--- a/apps/wallet-mobile/src/i18n/locales/tr-TR.json
+++ b/apps/wallet-mobile/src/i18n/locales/tr-TR.json
@@ -20,11 +20,11 @@
   "analytics.skip": "Skip",
   "analytics.toggle": "Allow Yoroi analytics",
   "components.common.errormodal.hideError": "Hide error message",
-  "components.common.errormodal.showError": "Show error message",
-  "components.common.fingerprintscreenbase.welcomeMessage": "Welcome Back",
+  "components.common.errormodal.showError": "Hata mesajını göster",
+  "components.common.fingerprintscreenbase.welcomeMessage": "Tekrardan Hoşgeldiniz",
   "components.common.languagepicker.brazilian": "Português brasileiro",
   "components.common.languagepicker.chinese": "简体中文",
-  "components.common.languagepicker.continueButton": "Choose language",
+  "components.common.languagepicker.continueButton": "Dil seçiniz",
   "components.common.languagepicker.contributors": "_",
   "components.common.languagepicker.czech": "Čeština",
   "components.common.languagepicker.slovak": "Slovenčina",
@@ -40,37 +40,37 @@
   "components.common.languagepicker.acknowledgement": "**The selected language translation is fully provided by the community**. EMURGO is grateful to all those who have contributed",
   "components.common.languagepicker.russian": "Русский",
   "components.common.languagepicker.spanish": "Español",
-  "components.common.navigation.dashboardButton": "Dashboard",
-  "components.common.navigation.delegateButton": "Delegate",
-  "components.common.navigation.transactionsButton": "Transactions",
-  "components.delegation.delegationnavigationbuttons.stakingCenterButton": "Go to Staking Center",
-  "components.delegation.withdrawaldialog.deregisterButton": "Deregister",
-  "components.delegation.withdrawaldialog.explanation1": "When **withdrawing rewards**, you also have the option to deregister the staking key.",
+  "components.common.navigation.dashboardButton": "Kontrol Paneli",
+  "components.common.navigation.delegateButton": "Temsilci",
+  "components.common.navigation.transactionsButton": "İşlemler",
+  "components.delegation.delegationnavigationbuttons.stakingCenterButton": "Katılım (Stake) Merkezine Git",
+  "components.delegation.withdrawaldialog.deregisterButton": "Kaydı iptal et",
+  "components.delegation.withdrawaldialog.explanation1": "**Ödül çekimi** yaparken, katılım anahatarınızın kaydını da kaldırabilirsiniz.",
   "components.delegation.withdrawaldialog.explanation2": "**Keeping the staking key** will allow you to withdraw the rewards, but continue delegating to the same pool.",
   "components.delegation.withdrawaldialog.explanation3": "**Deregistering the staking key** will give you back your deposit and undelegate the key from any pool.",
-  "components.delegation.withdrawaldialog.keepButton": "Keep registered",
-  "components.delegation.withdrawaldialog.warning1": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time.",
-  "components.delegation.withdrawaldialog.warning2": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserve.",
-  "components.delegation.withdrawaldialog.warning3": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
-  "components.delegation.withdrawaldialog.warningModalTitle": "Also deregister staking key?",
-  "components.delegationsummary.delegatedStakepoolInfo.copied": "Copied!",
-  "components.delegationsummary.delegatedStakepoolInfo.fullDescriptionButtonLabel": "Go to website",
-  "components.delegationsummary.delegatedStakepoolInfo.title": "Stake pool delegated",
-  "components.delegationsummary.delegatedStakepoolInfo.unknownPool": "Unknown pool",
-  "components.delegationsummary.delegatedStakepoolInfo.warning": "If you just delegated to a new stake pool, it may take a couple of minutes for the network to process your request.",
+  "components.delegation.withdrawaldialog.keepButton": "Kayıtlı kalmaya devam et.",
+  "components.delegation.withdrawaldialog.warning1": "Farklı bir havuza katılım sağlamak için katılım anahtarınızı kaldırmanıza gerek yoktur. Havuz katılım tercihinizi istediğiniz zaman değiştirebilirsiniz.",
+  "components.delegation.withdrawaldialog.warning2": "Eğer katılım anahtarınız katılım havuzunun ödül hesabı ise anahtar kaydını SİLMEMELİSİNİZ, bu kazanılan havuz işletimi ödüllerinin rezervlere geri gönderilmesine sebep olur.",
+  "components.delegation.withdrawaldialog.warning3": "Kayıt iptali iptal edilen anahtarın siz yeniden kayıt anahtarı oluşturana kadar (genelde bir havuza katılana kadar) ödül kazanmaması anlamına gelir. ",
+  "components.delegation.withdrawaldialog.warningModalTitle": "Katılım anahtarı da iptal edilsin mi?",
+  "components.delegationsummary.delegatedStakepoolInfo.copied": "Kopyalandı!",
+  "components.delegationsummary.delegatedStakepoolInfo.fullDescriptionButtonLabel": "Websitesine git",
+  "components.delegationsummary.delegatedStakepoolInfo.title": "Katılım havuzuna katılım sağlandı.",
+  "components.delegationsummary.delegatedStakepoolInfo.unknownPool": "Bilinmeyen havuz",
+  "components.delegationsummary.delegatedStakepoolInfo.warning": "Eğer yeni bir havuza katılım sağladıysanız ağ'ın isteğinizi işlemesi bir kaç dakika alabilir.",
   "components.delegationsummary.epochProgress.endsIn": "Ends in",
-  "components.delegationsummary.epochProgress.title": "Epoch progress",
+  "components.delegationsummary.epochProgress.title": "Dönem (Epoch) ilerlemesi",
   "components.delegationsummary.failedwalletupgrademodal.title": "Heads up!",
-  "components.delegationsummary.failedwalletupgrademodal.explanation1": "Some users experienced problems while upgrading their wallets in the Shelley testnet.",
-  "components.delegationsummary.failedwalletupgrademodal.explanation2": "If you observed an unexpected zero balance after having upgraded your wallet, we recommend you to restore your wallet once again. We apologize for any inconvenience this may have caused.",
-  "components.delegationsummary.failedwalletupgrademodal.okButton": "OK",
-  "components.delegationsummary.notDelegatedInfo.firstLine": "You have not delegated your ADA yet.",
-  "components.delegationsummary.notDelegatedInfo.secondLine": "Go to the Staking Center to choose which stake pool you want to delegate to. Note that you may delegate only to one stake pool.",
-  "components.delegationsummary.upcomingReward.followingLabel": "Following reward",
-  "components.delegationsummary.upcomingReward.nextLabel": "Next reward",
-  "components.delegationsummary.upcomingReward.rewardDisclaimerText": "Note that after you delegate to a stake pool, you will need to wait until the end of the current epoch, plus two additional epochs, before you start receiving rewards.",
-  "components.delegationsummary.userSummary.title": "Your summary",
-  "components.delegationsummary.userSummary.totalDelegated": "Total Delegated",
+  "components.delegationsummary.failedwalletupgrademodal.explanation1": "Bazı kullanıcılar Shelley testnetindeki cüzdanlarınının güncellemesinde sorun yaşadılar.",
+  "components.delegationsummary.failedwalletupgrademodal.explanation2": "Eğer cüzdan güncellemesi sonrası beklenmedik şekilde bakiyenizi sıfır olarak görürseniz cüzdanınızı bir kez daha geri getirmenizi tavsiye ederiz. Bunun yarattığı rahatsızlıktan dolayı özür dileriz. ",
+  "components.delegationsummary.failedwalletupgrademodal.okButton": "Tamam",
+  "components.delegationsummary.notDelegatedInfo.firstLine": "ADA'nız ile henüz bir katılım yapmadınız.",
+  "components.delegationsummary.notDelegatedInfo.secondLine": "Hangi havuza katılım yapmak istediğinizi seçmek için lütfen Katılım (Stake) Merkezine gidin. Aynı anda sadece bir havuza katılım sağlayabileceğinizi unutmayın.",
+  "components.delegationsummary.upcomingReward.followingLabel": "İşlenen ödül",
+  "components.delegationsummary.upcomingReward.nextLabel": "Sıradaki ödül",
+  "components.delegationsummary.upcomingReward.rewardDisclaimerText": "Bir ödül havuzuna katılım sağladıktan sonra ödüllerinizi almaya başlamak için katılım sağladığınız döngü (epoch) artı iki döngü daha beklemeniz gerektiğini unutmayınız.",
+  "components.delegationsummary.userSummary.title": "Toplam özetiniz",
+  "components.delegationsummary.userSummary.totalDelegated": "Toplam katılım sağlanan miktar",
   "components.delegationsummary.userSummary.totalRewards": "Total Rewards",
   "components.delegationsummary.userSummary.withdrawButtonTitle": "Withdraw",
   "components.delegationsummary.warningbanner.message": "The last ITN rewards were distributed on epoch 190. Rewards can be claimed on mainnet once Shelley is released on mainnet.",
