--- a/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
@@ -150,7 +150,7 @@
     }
   },
   {
-    "id": "components.firstrun.custompinscreen.title",
+    "id": "components.initialization.custompinscreen.title",
     "defaultMessage": "!!!Set PIN",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
@@ -161,7 +161,7 @@
     "end": {
       "line": 217,
       "column": 3,
-      "index": 6770
+      "index": 6776
     }
   },
   {
@@ -171,12 +171,12 @@
     "start": {
       "line": 218,
       "column": 17,
-      "index": 6789
+      "index": 6795
     },
     "end": {
       "line": 221,
       "column": 3,
-      "index": 6892
+      "index": 6898
     }
   },
   {
@@ -186,12 +186,12 @@
     "start": {
       "line": 222,
       "column": 17,
-      "index": 6911
+      "index": 6917
     },
     "end": {
       "line": 225,
       "column": 3,
-      "index": 7009
+      "index": 7015
     }
   },
   {
@@ -201,12 +201,12 @@
     "start": {
       "line": 226,
       "column": 20,
-      "index": 7031
+      "index": 7037
     },
     "end": {
       "line": 229,
       "column": 3,
-      "index": 7149
+      "index": 7155
     }
   },
   {
@@ -216,12 +216,12 @@
     "start": {
       "line": 230,
       "column": 14,
-      "index": 7165
+      "index": 7171
     },
     "end": {
       "line": 233,
       "column": 3,
-      "index": 7265
+      "index": 7271
     }
   },
   {
@@ -231,12 +231,12 @@
     "start": {
       "line": 234,
       "column": 16,
-      "index": 7283
+      "index": 7289
     },
     "end": {
       "line": 237,
       "column": 3,
-      "index": 7400
+      "index": 7406
     }
   }
 ]
