--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -658,5 +658,10 @@
   "global.currentVersion": "Current Version",
   "languagepicker.title": "Language",
   "languagepicker.search": "Search",
-  "yoroilogo.text": "Light wallet for Cardano assets"
+  "yoroilogo.text": "Light wallet for Cardano assets",
+  "termsOfService.agreementUpdateTitle": "Terms of Service Agreement Update",
+  "termsOfService.agreementUpdateDescription": "We have updated our Terms of Service Agreement to enhance your experience. Please review and accept them to keep enjoying Yoroi.",
+  "termsOfService.tosIAgreeWith": "I agree with",
+  "termsOfService.tosAgreement": "Terms Of Service Agreement"
+
 }
