--- a/apps/wallet-mobile/translations/messages/src/AppNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/AppNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Enter PIN",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 146,
+      "line": 162,
       "column": 17,
-      "index": 4736
+      "index": 5668
     },
     "end": {
-      "line": 149,
+      "line": 165,
       "column": 3,
-      "index": 4826
+      "index": 5758
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Set PIN",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 150,
+      "line": 166,
       "column": 18,
-      "index": 4846
+      "index": 5778
     },
     "end": {
-      "line": 153,
+      "line": 169,
       "column": 3,
-      "index": 4944
+      "index": 5876
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Auth with OS changes",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 154,
+      "line": 170,
       "column": 25,
-      "index": 4971
+      "index": 5903
     },
     "end": {
-      "line": 157,
+      "line": 173,
       "column": 3,
-      "index": 5085
+      "index": 6017
     }
   },
   {
@@ -49,14 +49,29 @@
     "defaultMessage": "!!!Auth with OS changed detected",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 158,
+      "line": 174,
       "column": 27,
-      "index": 5114
+      "index": 6046
     },
     "end": {
-      "line": 161,
+      "line": 177,
       "column": 3,
-      "index": 5235
+      "index": 6167
+    }
+  },
+  {
+    "id": "components.initialization.acepttermsofservicescreen.title",
+    "defaultMessage": "!!!Terms of Service Agreement",
+    "file": "src/AppNavigator.tsx",
+    "start": {
+      "line": 178,
+      "column": 20,
+      "index": 6189
+    },
+    "end": {
+      "line": 181,
+      "column": 3,
+      "index": 6316
     }
   }
 ]
