--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -656,7 +656,7 @@
   "global.network": "Network",
   "global.commit": "Commit",
   "global.currentVersion": "Current Version",
-  "languagepicker.title": "Language",
-  "languagepicker.search": "Search",
+  "global.title": "Language",
+  "global.search": "Search",
   "yoroilogo.text": "Light wallet for Cardano assets"
 }
