--- a/apps/wallet-mobile/translations/messages/src/AppNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/AppNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Enter PIN",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 180,
+      "line": 161,
       "column": 17,
-      "index": 6312
+      "index": 5405
     },
     "end": {
-      "line": 183,
+      "line": 164,
       "column": 3,
-      "index": 6402
+      "index": 5495
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Set PIN",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 184,
+      "line": 165,
       "column": 18,
-      "index": 6422
+      "index": 5515
     },
     "end": {
-      "line": 187,
+      "line": 168,
       "column": 3,
-      "index": 6520
+      "index": 5613
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Auth with OS changes",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 188,
+      "line": 169,
       "column": 25,
-      "index": 6547
+      "index": 5640
     },
     "end": {
-      "line": 191,
+      "line": 172,
       "column": 3,
-      "index": 6661
+      "index": 5754
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Auth with OS changed detected",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 192,
+      "line": 173,
       "column": 27,
-      "index": 6690
+      "index": 5783
     },
     "end": {
-      "line": 195,
+      "line": 176,
       "column": 3,
-      "index": 6811
+      "index": 5904
     }
   },
   {
@@ -64,14 +64,29 @@
     "defaultMessage": "!!!Terms of Service Agreement",
     "file": "src/AppNavigator.tsx",
     "start": {
-      "line": 196,
+      "line": 177,
       "column": 20,
-      "index": 6833
+      "index": 5926
     },
     "end": {
-      "line": 199,
+      "line": 180,
       "column": 3,
-      "index": 6960
+      "index": 6053
+    }
+  },
+  {
+    "id": "components.initialization.aceptprivacypolicyscreen.title",
+    "defaultMessage": "!!!Privacy Policy",
+    "file": "src/AppNavigator.tsx",
+    "start": {
+      "line": 181,
+      "column": 28,
+      "index": 6083
+    },
+    "end": {
+      "line": 184,
+      "column": 3,
+      "index": 6197
     }
   }
 ]
